<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_my_record">Show my Record</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- Drawer Menu items-->
    <string-array name="nav_drawer_items">
        <item> Bike </item>
        <item> Bus </item>
        <item> Car </item>
        <item> Ferry </item>
        <item> Subway </item>
        <item> Train </item>
    </string-array>

    <!--  Sliding Menu item icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_directions_bike_black_36dp</item>
        <item>@drawable/ic_directions_bus_black_36dp</item>
        <item>@drawable/ic_directions_car_black_36dp</item>
        <item>@drawable/ic_directions_ferry_black_36dp</item>
        <item>@drawable/ic_directions_subway_black_36dp</item>
        <item>@drawable/ic_directions_train_black_36dp</item>
    </array>
    <string name = "hello_blank_fragment">blank framgent</string>

    <!-- record text -->
    <string name="text_today">TODAY</string>

    <string name="text_win_rate">Win</string>

    <!-- record distance unit -->
    <string name="text_meter">m</string>
    <string name="text_kilometer">km</string>

    <!-- rival mode -->
    <string name="text_basic">Basic</string>
    <string name="text_normal">Normal</string>
    <string name="text_hard">Hard</string>
    <string name="text_event">Event</string>

    <!-- rival status -->
    <string name="text_goal">goal</string>
    <string name="text_speed">speed</string>

    <!-- record text -->
    <string name="text_win">를 이겼습니다</string>
    <string name="text_lose">에게 졌습니다</string>

    <string name="text_new">NEW</string>

    <string name="text_earth_distance">지구 한 바퀴 46286km</string>

    <string name="text_agree1">이것은 이것이고 저것은 저것이니라 ㅇ\n;ㅇ\nㅋ\nㅋ\nㅇ\nㅇ\nㅋ\nㅋ\nㅋ\nㅇ\n;ㅇ\nㅋ\nㅋ\nㅇ\nㅇ\nㅋ\nㅋ\nㅋ\nㅇ\nㅋ\nㅋ\nㅇ\nㅇ\nㅋ\nㅋ\nㅋ\n</string>
    <string name="checkbox_agree1">동의? Call? 콜? 고? ㄱㄱ? </string>
    <string name="text_agree2">게임을 할라면 영혼도 털리고 개인정보도 털려야 하느니 ㅇ\n;ㅇ\nㅋ\nㅋ\nㅇ\nㅇ\nㅋ\nㅋ\nㅋ\nㅇ\n;ㅇ\nㅋ\nㅋ\nㅇ\nㅇ\nㅋ\nㅋ\nㅋ\nㅇ\nㅋ\nㅋ\nㅇ\nㅇ\nㅋ\nㅋ\nㅋ\nㅇ\nㅋ\nㅋ\nㅇ\nㅇ\nㅋ\nㅋ\nㅋ\n</string>
    <string name="checkbox_agree2">레알? Real? 리얼? 진짜? 정말?</string>
    <string name="btn_next">Next</string>
</resources>
