<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/scrollView2"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/text_agree1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_margin="5dp" />

    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView2"
        android:layout_gravity="left|right"
        android:text="@string/checkbox_agree1"
        android:layout_margin="5dp" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/scrollView"
        android:layout_margin="5dp"
        android:layout_above="@+id/checkBox2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:text="@string/text_agree2" />

    </ScrollView>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/checkbox_agree2"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:text="@string/btn_next" />

</RelativeLayout>
