<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/img_rival_pic"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_weight=".35"
        android:src="@drawable/q"/>

    <!-- rival view -->
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_weight=".65">

        <TextView
            android:id="@+id/text_rival_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:textSize="20dp"
            android:text="@string/text_basic"/>

        <!-- rival status -->
        <LinearLayout
            android:id="@+id/ln_rival_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/text_rival_mode"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_rival_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Mio"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/text_speed" />

                <TextView
                    android:id="@+id/text_rival_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/text_goal" />

                <TextView
                    android:id="@+id/text_rival_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>